// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
<View
  style={
    Array [
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`withBot 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Array [
        Object {
          "paddingBottom": 50,
        },
      ],
    ]
  }
>
  <View />
</View>
`;

exports[`withTop 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Array [
        Object {
          "paddingTop": 100,
        },
      ],
    ]
  }
>
  <View />
</View>
`;
